--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -33,8 +33,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="35dp"
+        android:layout_marginBottom="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AddButton"
-        tools:layout_editor_absoluteX="16dp">
+        tools:layout_editor_absoluteX="8dp">
 
         <LinearLayout
             android:id="@+id/Lay"
@@ -45,5 +47,17 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/Accept"
+        android:layout_width="105dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="36dp"
+        android:backgroundTint="#00FF0B"
+        android:text="Принять"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
