--- a/app/src/main/res/layout/pick_activity.xml
+++ b/app/src/main/res/layout/pick_activity.xml
@@ -11,9 +11,16 @@
         tools:layout_editor_absoluteY="1dp">
 
         <LinearLayout
+            android:id="@+id/Layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -24,7 +31,7 @@
                     android:id="@+id/imageView"
                     android:layout_width="32dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0"/>
+                    android:layout_weight="0" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -32,13 +39,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="TextView" />
-            </LinearLayout>
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Button" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
