--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -6,27 +6,20 @@
     android:layout_height="match_parent"
     android:background="@drawable/common_google_signin_btn_icon_dark_normal_background">
 
-    <Button
-        android:onClick="AddStation"
+    <ImageButton
         android:id="@+id/AddButton"
         android:layout_width="37dp"
         android:layout_height="35dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="8dp"
-        android:text="+"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:onClick="minusStation"
-        android:id="@+id/minusButton"
-        android:layout_width="35dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="3dp"
-        android:text="-"
+        android:layout_marginStart="8dp"
+        android:background="#00FFFFFF"
+        android:onClick="AddStation"
+        android:padding="0dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ellipse_1__1_"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
     <ScrollView
         android:id="@+id/Scroll"
@@ -44,12 +37,33 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
+
+                <ImageButton
+                    android:id="@+id/imageButton5"
+                    android:layout_width="46dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/minus" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
 
     <Button
         android:id="@+id/Accept"
+        android:onClick="result"
         android:layout_width="105dp"
         android:layout_height="35dp"
         android:layout_marginStart="36dp"
@@ -59,5 +73,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
