--- a/app/src/main/res/layout/result_activity.xml
+++ b/app/src/main/res/layout/result_activity.xml
@@ -6,29 +6,30 @@
     android:layout_height="match_parent">
 
     <ImageButton
-        android:id="@+id/imageButton8"
+        android:id="@+id/imageButton9"
         android:layout_width="25dp"
         android:layout_height="29dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="3dp"
-        android:onClick="openSortMenu"
+        android:layout_marginStart="1dp"
+        android:onClick="openMain"
         android:src="@drawable/abc_vector_test"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="160dp"
-        android:layout_height="126dp"
+        android:id="@+id/scrollView3"
+        android:layout_width="157dp"
+        android:layout_height="135dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton8">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
-            android:id="@+id/Layout"
+            android:id="@+id/layoutR"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical" />
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
