--- a/app/src/main/res/layout/pick_activity.xml
+++ b/app/src/main/res/layout/pick_activity.xml
@@ -11,6 +11,7 @@
         android:layout_height="29dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="3dp"
+        android:backgroundTint="#00FFFFFF"
         android:onClick="openSortMenu"
         android:src="@drawable/abc_vector_test"
         app:layout_constraintStart_toStartOf="parent"
