--- a/app/src/main/res/layout/sort_letters.xml
+++ b/app/src/main/res/layout/sort_letters.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imageButton"
         android:layout_width="25dp"
         android:layout_height="29dp"
+        android:backgroundTint="#00FFFFFF"
         android:onClick="openSortMenu"
         android:src="@drawable/abc_vector_test"
         tools:layout_editor_absoluteX="5dp"
@@ -16,15 +17,19 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="35dp"
-        android:layout_height="34dp"
-        tools:layout_editor_absoluteX="109dp"
-        tools:layout_editor_absoluteY="5dp"
-        tools:src="@tools:sample/avatars" />
+        android:layout_width="60dp"
+        android:layout_height="61dp"
+        android:src="@drawable/logo_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageButton"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/logo_1" />
 
     <ScrollView
+        android:id="@+id/scrollView4"
         android:layout_width="158dp"
-        android:layout_height="119dp"
+        android:layout_height="143dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
