--- a/app/src/main/res/layout/sort_lines.xml
+++ b/app/src/main/res/layout/sort_lines.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imageButton"
         android:layout_width="25dp"
         android:layout_height="29dp"
+        android:backgroundTint="#00FFFFFF"
         android:onClick="openSortMenu"
         android:src="@drawable/abc_vector_test"
         tools:layout_editor_absoluteX="5dp"
@@ -16,15 +17,20 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="35dp"
-        android:layout_height="34dp"
-        tools:layout_editor_absoluteX="109dp"
-        tools:layout_editor_absoluteY="5dp"
-        tools:src="@tools:sample/avatars" />
+        android:layout_width="49dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="94dp"
+        android:src="@drawable/logo_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageButton"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/logo_1" />
 
     <ScrollView
-        android:layout_width="158dp"
-        android:layout_height="119dp"
+        android:layout_width="168dp"
+        android:layout_height="144dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +103,7 @@
                     android:layout_height="61dp"
                     android:layout_weight="1"
                     android:background="#00FFFFFF"
-                    android:contentDescription="5"
+                    android:contentDescription="6"
                     android:onClick="lineSort"
                     android:scaleType="fitCenter"
                     android:src="@drawable/line_5" />
@@ -108,7 +114,7 @@
                     android:layout_height="61dp"
                     android:layout_weight="1"
                     android:background="#00FFFFFF"
-                    android:contentDescription="6"
+                    android:contentDescription="5"
                     android:onClick="lineSort"
                     android:scaleType="fitCenter"
                     android:src="@drawable/line_6" />
@@ -137,7 +143,7 @@
                     android:layout_height="61dp"
                     android:layout_weight="1"
                     android:background="#00FFFFFF"
-                    android:contentDescription="9"
+                    android:contentDescription="13"
                     android:onClick="lineSort"
                     android:scaleType="fitCenter"
                     android:src="@drawable/line_8" />
@@ -217,7 +223,7 @@
                     android:layout_height="61dp"
                     android:layout_weight="1"
                     android:background="#00FFFFFF"
-                    android:contentDescription="17"
+                    android:contentDescription="16"
                     android:onClick="lineSort"
                     android:scaleType="fitCenter"
                     android:src="@drawable/line_14" />
@@ -228,7 +234,7 @@
                     android:layout_height="61dp"
                     android:layout_weight="1"
                     android:background="#00FFFFFF"
-                    android:contentDescription="15"
+                    android:contentDescription="17"
                     android:onClick="lineSort"
                     android:scaleType="fitCenter"
                     android:src="@drawable/line_15" />
@@ -268,7 +274,7 @@
                     android:layout_height="61dp"
                     android:layout_weight="1"
                     android:background="#00FFFFFF"
-                    android:contentDescription="1"
+                    android:contentDescription="35"
                     android:onClick="lineSort"
                     android:scaleType="fitCenter"
                     android:src="@drawable/line_d3" />
